# ros-learning-journey

./: .gitignore  README.md
docs/: learning_notes.md  learning_notes.md.save  project_board.md  quick_start.md  setup_guide.md  troubleshooting.md
scripts/: test_heart.sh
src/map_pkg/: package.xml
src/map_pkg/src/: map_pub_node.cpp
src/my_first_package/: CMakeLists.txt  package.xml
src/my_first_package/launch/: kai_hei.launch
src/my_first_package/src/: chao_node.cpp  ma_node.cpp  main.cpp
src/my_turtle_draw/: CMakeLists.txt  CMakeLists.txt-bak  package.xml
src/my_turtle_draw/src/: draw_heart.cpp  draw_heart.cpp.save
